adjusting style sheets

--- a/currentresearch.html
+++ b/currentresearch.html
@@ -3,7 +3,7 @@ layout: page
 title: "Current research"
 ---
 <head>
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="https://zoer27.github.io/assets/css/currentresearchmystyle.css">
 </head>
 
 
