--- a/inthenews.html
+++ b/inthenews.html
@@ -3,7 +3,7 @@ layout: page
 title: In the News
 ---
 <head>
-<link rel="stylesheet" href="site.inthenews.mystyle.css">
+<link rel="stylesheet" href="https://zoer27.github.io/assets/css/inthenewsmystyle.css">
 </head>
 
 {% assign newsitem = site.inthenews | sort: "date" | reverse %}
